--- a/Alpha-paint/src/alphapaint.ui
+++ b/Alpha-paint/src/alphapaint.ui
@@ -29,7 +29,7 @@
          <number>20</number>
         </property>
         <item>
-         <widget class="QPushButton" name="pushButton">
+         <widget class="QPushButton" name="myButtonShowAlpha">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
             <horstretch>0</horstretch>
